# active-context-protocol

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
src/: __init__.py  cli.py  config.py  delivery.py  file_tracker.py  token_monitor.py
src/triggers/: __init__.py  compaction.py  memory_filing.py
tests/: test_cli.py  test_config.py  test_delivery.py  test_file_tracker.py  test_token_monitor.py
tests/test_triggers/: test_compaction.py  test_memory_filing.py
